# vke

./: .clang-format  CMakeLists.txt  CompileOptions.cmake  CompileSettings.cmake  CompilerSettings.cmake  EngineLib.cmake  Exported-2016-09-17.vssettings  IncludeFiles.cmake  LICENSE  LinkSettings.cmake  README.md  ThirdPartyLib.cmake
include/: VKE.h
include/vke/: CVkEngine.h  ITask.h  RenderSystem.h  VKECommon.h  VKEErrorHandling.h  VKEPreprocessor.h  VKETypes.h
include/vke/Core/: CMakeLists.txt  CObject.h  VKECommon.h  VKEConfig.h  VKEErrorHandling.h  VKEForwardDeclarations.h  VKEPreprocessor.h  VKETypes.h
include/vke/Core/Input/: CInputSystem.h  Common.h  EventListeners.h
include/vke/Core/Managers/: CFileManager.h  CImageManager.h  CResourceManager.h
include/vke/Core/Math/: CAABB.h  CBoundingSphere.h  CFrustum.h  CMatrix.h  CQuaternion.h  CVector.h  Math.h  Types.h  VectorBase.h
include/vke/Core/Math/DirectX/: CAABB.inl  CBoundingSphere.inl  CFrustum.inl  CMatrix.h  CMatrix.inl  CQuaternion.inl  CVector.h  CVector.inl
include/vke/Core/Memory/: CDefaultAllocator.h  CFreeListPool.h  CMemoryPoolManager.h  CPageAllocator.h  Common.h  Memory.h
include/vke/Core/Platform/: CPlatform.h  CWindow.h  Common.h
include/vke/Core/Resource/: CManager.h  CResource.h  TCManager.h
include/vke/Core/Resources/: CFile.h  CImage.h  CManager.h  CResource.h  Common.h  TCManager.h
include/vke/Core/Thread/: Common.h  ITask.h
include/vke/Core/Threads/: CTaskGroup.h  CThreadPool.h  CThreadWorker.h  Common.h  ITask.h
include/vke/Core/Utils/: CLogger.h  CProfiler.h  CStringStream.h  CTimer.h  Common.h  STLUtils.h  TCBitset.h  TCConstantArray.h  TCContainerBase.h  TCDynamicArray.h  TCDynamicContainerBase.h  TCDynamicRingArray.h  TCFifo.h  TCHandledBuffer.h  TCList.h  TCPoolFreeList.h  TCSingleton.h  TCSmartPtr.h  TCSmartPtr.inl  TCString.h
include/vke/Core/Utils/inl/: TCList.inl  TCSmartPtr.inl
include/vke/Memory/: Memory.h
include/vke/Platform/: CPlatform.h  Common.h
include/vke/RenderSystem/: CCommandBuffer.h  CComputeContext.h  CContext.h  CContextBase.h  CDDI.h  CDDITypes.h  CDescriptorSet.h  CDeviceContext.h  CDeviceDriverInterface.h  CFrameGraph.h  CGraphicsContext.h  CImage.h  CIndexBuffer.h  CMakeLists.txt  CPipeline.h  CQueue.h  CRenderPass.h  CRenderQueue.h  CRenderSystem.h  CRenderTarget.h  CRenderingPipeline.h  CSampler.h  CSwapChain.h  CTexture.h  CTransferContext.h  CVertexBuffer.h  Common.h  Config.h  Context.h  Helper.h  IFrameGraph.h
include/vke/RenderSystem/Managers/: CBackBufferManager.h  CBufferManager.h  CFramebufferManager.h  CImageManager.h  CManagerBase.h  CResourceManager.h  CShaderManager.h  CTextureManager.h
include/vke/RenderSystem/Resources/: CBuffer.h  CFramebuffer.h  CIndexBuffer.h  CResource.h  CShader.h  CTexture.h  CTextureView.h  CVertexBuffer.h
include/vke/RenderSystem/Tasks/: GraphicsContext.h
include/vke/RenderSystem/Vulkan/: CCommandBuffer.h  CCommandBufferManager.h  CContext.h  CDescriptorSet.h  CDevice.h  CDeviceMemoryManager.h  CGraphicsContext.h  CGraphicsQueue.h  CPipeline.h  CPipelineManager.h  CRenderPass.h  CRenderQueue.h  CRenderSystem.h  CRenderTarget.h  CRenderTree.h  CRenderingPipeline.h  CResourceBarrierManager.h  CResourceManager.h  CSampler.h  CSubmitManager.h  CSwapChain.h  CVkDeviceWrapper.h  Common.h  PrivateDescs.h  VKEImageFormats.h  Vulkan.h
include/vke/RenderSystem/Vulkan/Managers/: CCommandBufferManager.h  CDescriptorSetManager.h  CDeviceMemoryManager.h  CDrawcallManager.h  CShaderManager.h  CSubmitManager.h
include/vke/RenderSystem/Vulkan/Resources/: CBuffer.h  CIndexBuffer.h  CShader.h  CTexture.h  CTextureView.h  CVertexBuffer.h
include/vke/RenderSystem/Vulkan/Wrappers/: CCommandBuffer.h
include/vke/Resource/: CResource.h  TCManager.h
include/vke/Scene/: CBVH.h  CCamera.h  CLight.h  CMakeLists.txt  COctree.h  CScene.h  CWorld.h  Common.h  Config.h
include/vke/Scene/Terrain/: CTerrain.h
include/vke/Thread/: Common.h
include/vke/Utils/: CLogger.h  STLUtils.h  STLUtils.inl  TCSmartPtr.h
lib/: DevIL.lib  DevIL_d.lib  HLSL.lib  ILU.lib  ILUT.lib  ILUT_d.lib  ILU_d.lib  OGLCompiler.lib  OGLCompilerd.lib  OSDependent.lib  OSDependentd.lib  SPIRV.lib
samples/: CMakeLists.txt  CSampleFramework.h
samples/BasicBackgroundLoading/: main.cpp
samples/HelloWorld/: CMakeLists.txt  main.cpp
samples/MeshShaders/: CMakeLists.txt  main.cpp
samples/MultiWindow/: main.cpp
samples/SimpleRenderTarget/: main.cpp
samples/SimpleScene/: main.cpp
samples/Terrain/: main.cpp
samples/Triangle/: main.cpp
samples/data/shaders/: test.vs
src/: CVkEngine.cpp  DllMain.cpp
src/Core/: CObject.cpp  VKECommon.cpp
src/Core/Managers/: CFileManager.cpp  CImageManager.cpp
src/Core/Math/: Math.cpp
src/Core/Memory/: CDefaultAllocator.h  CFreeList.cpp  CFreeList.h  CFreeListManager.cpp  CFreeListPool.cpp  CFreeListPool.h  CMemoryPoolManager.cpp  CPageAllocator.cpp  TCFreeListManager.h
src/Core/Resource/: CManager.cpp
src/Core/Resources/: CFile.cpp  CImage.cpp  CManager.cpp  CResource.cpp
src/Core/Thread/: CThreadPool.cpp  CThreadPool.h  CThreadWorker.cpp  CThreadWorker.h
src/Core/Threads/: CTaskGroup.cpp  CThreadPool.cpp  CThreadPool.h  CThreadWorker.cpp  CThreadWorker.h
src/Core/Utils/: CLogger.cpp  CStringStream.cpp  CTimer.cpp
src/Memory/: CDefaultAllocator.h  CFreeList.cpp  CFreeList.h  CFreeListPool.h  TCFreeList.h
src/Platform/Windows/: CWindow.cpp
src/RenderSystem/: CCommandBuffer.cpp  CCommandBufferManager.cpp  CCommandBufferManager.h  CContext.cpp  CContextBase.cpp  CDevice.cpp  CDevice.h  CDeviceContext.h  CDrawcall.h  CDrawcallManager.h  CFrameGraph.cpp  CQueue.cpp  CRenderQueue.cpp  CRenderSystem.cpp  CRenderTree.h  CShaderCompiler.h  CSwapChain.cpp  CSwapChain.h  CTransferContext.cpp  Common.cpp  Vulkan.cpp  Vulkan.h
src/Resource/: CManager.cpp
src/Scene/: CCamera.cpp  CLight.cpp  COctree.cpp  COctreeScenePartition.cpp  CScene.cpp  CSceneManager.cpp  CScenePartition.cpp  CWorld.cpp
src/Tasks/: RenderSystem.h
src/Thread/: CThreadPool.cpp  CThreadPool.h  CThreadWorker.h
(+97 files in other folders)
